@@ -72,9 +72,9 @@ Give projection center and scale (1:xxxx or UNIT/degree).
 .RE
 .TP
 \fB\-Ju\fP\fIzone/scale\fP or \fB\-JU\fP\fIzone/width\fP (UTM - Universal Transverse Mercator \fB[C]\fP).
-Give the zone number (1-60) and scale (1:xxxx or UNIT/degree).
+Give the UTM zone (A,B,1-60[C-X],Y,Z)) and scale (1:xxxx or UNIT/degree).
 .br
-Zones: prepend - or + to enforce southern or northern hemisphere conventions [northern if south > 0].
+Zones: If C-X not given, prepend - or + to enforce southern or northern hemisphere conventions [northern if south > 0].
 .TP
 \fB\-Jy\fP\fIlon0/lats/scale\fP or \fB\-JY\fP\fIlon0/lats/width\fP (Basic Cylindrical Projections \fB[E]\fP).
 Give the central meridian, standard parallel, and scale (1:xxxx or UNIT/degree).
